# -PortaPack-Havoc-Mod-KevDevSecOps-

./: CODE_OF_CONDUCT  CONTRIBUTING.md  HTMLREAD  INDEX.html  LICENSE  README.md  RF_hacking_cheatsheet.md  SECURITY.md  ethical_warning.txt  iot_rf_killchain.md  main.cpp
.github/workflows/: build.yml
Docs/: Desarolladores  Desarrolladores
Firmware/: Main.cpp
Firmware/Application/: CMakeLists.txt  jammer_mod.hpp
Firmware/Application/replay_attack/: replay_attack.hpp
Firmware/Application/scanner_mod/: Scanner_mod.cpp  scanner_mod.hpp
Firmware/common/: portapack.hpp
Firmware/firmware-cpp/: app_txrx.hpp
Firmware/hal/: hardware-config.hpp
Firmware/src/: system-init.cpp
Firmware/ui/: Bitmap.hpp  ui-navigator.hpp  ui-reciver.hpp  ui-sistem.hpp  ui_controls.cpp  ui_navigation.cpp
Go_tools/: Rf_analizer.go  Signal_cloner.go  go.mod  main.go  portapack_api.go
Rust_tools/: Cargo.toml  Deauth_attack.rs  Readme.md  Rf_capture.rs  ethical_guard.rs  jammer.rs  main.rs  ml_detection.rs  signal-procesing.rs  spatial.rs
Signal_ninja/: Decoder.rs  Encoder.rs
Signal_ninja/signal-processing-rust/: Cargo.toml
Signal_ninja/signal-processing-rust/src/: main.rs
