[package]
name = "portapack-jammer-research"
version = "0.1.0"
edition = "2021"
description = "Herramienta de investigación ética para análisis de espectro y seguridad RF"
license = "GPL-3.0"
repository = "https://github.com/KevinDevSecOps/PortaPack-Havoc-Mod-KevDevSecOps-"
readme = "README.md"

[features]
default = ["ethical_guard"]
hardware_testing = []  # Solo activar en entornos controlados

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
crossbeam = "0.8"
rand = "0.8"

[dev-dependencies]
assertables = "5.0"
[package]
name = "portapack-ai-analyser"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam = "0.8"
rayon = "1.5"
ndarray = "0.15"
rand = "0.8"
libm = "0.2"
byteorder = "1.4"
serialport = "4.2"
# Machine learning ligero
linfa = "0.6"
linfa-kmeans = "0.6"
# Procesamiento de señal
rustfft = "6.1"
realfft = "3.2"
# Visualización (para debugging)
plotters = "0.3"
[package]
name = "portapack_rust_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
hackrf = "0.3"      # Para controlar el HackRF/PortaPack
pnet = "0.31"       # Manipulación de paquetes
libc = "0.2"        # Llamadas al sistema
